--- a/css/style.css
+++ b/css/style.css
@@ -441,11 +441,16 @@ Galeria de imagenes
 .img-ampliada{
   width: 100%;
   height: 60vh;
+  text-align: center;
 }
 
-.img-ampliada img,
+.img-ampliada img {
+  height: 100%;
+  border-radius: 14px;
+}
+
 .img-ampliada model-viewer,
-.img-ampliada iframe {
+.img-ampliada iframe{
   height: 100%;
   width: 100%;
   border-radius: 14px;
@@ -465,7 +470,6 @@ iframe.img-carousel .active {
 #wrapper {
   width: 100%;
   height: 30vh;
-  max-width: 964px;
   position: relative;
 }
 
