--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,6 @@ Mapas dólmenes
 
 #map, .map, .map img{
   width: 100%;
-  height: 100%;
   border-radius: 14px;
 }
 
@@ -526,7 +525,7 @@ iframe.img-carousel .active {
 
 #content {
   display: grid;
-  grid-gap: 16px;
+  grid-gap: 10px;
   grid-auto-flow: column;
   margin: auto;
   box-sizing: border-box;
@@ -644,6 +643,7 @@ Barra de navegación
     border-radius: 20px;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     font-size: 0.7em;
+    margin-left: 10px;
   }
 
   .nav-bar ol {
@@ -763,8 +763,9 @@ Galeria de imagenes
 }
 
 #content>img, #content>model-viewer{
-  height: 130px;
-  width: 130px;
+  height: 100px;
+  width: 100px;
+  margin-left: 7px;
 }
 
 }
